modifique el temaño de imgs

--- a/css/main.css
+++ b/css/main.css
@@ -143,7 +143,9 @@ body {
     }
 
     .opcion img {
-       width: 100%;
+        height: 100px;
+
+        width: 100px;
     }
 
     .opcion p {
